# rpl

./: .gitignore  .gitmodules  .uncrustify.cfg  HACKING.md  MANIFEST.in  Makefile  Makefile.am  Performance tests.md  Performance tests.ods  README.md  README.md.in  bootstrap  bootstrap.conf  chardet.vapi  cmdline.vapi  config.vapi  configure.ac  fd-stream.vala  gnu.vapi  go.mod  go.sum  iconv.vapi  main.go  man-extras.1  man-include.1  mypy.ini  opts.ggo  pcre2-16-demo.vala  pcre2-16.h  pcre2.vapi  prefix-stream.vala  pyproject.toml  rpl  rpl.1  rpl.vala  setup.cfg  setup.py  slurp.vala  test-prefix-stream.vala  test.vala  (+2 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml
build-aux/: .gitignore  rpl-help2man-wrapper
cmd/: root.go
lib/: .gitignore
manpage/: create-man.sh  rpl.1  rpl.txt
rpl/: __init__.py  __main__.py
test-files/: abc-123_empty-matches_expected.txt  empty-match-at-buffer-end_expected.txt  lorem-iso-8859-1_explicit-encoding_expected.txt  lorem-utf-8.txt  lorem-utf-8_fixed-strings_expected.txt  lorem-utf-8_match-case-non-ascii_expected.txt  lorem-utf-8_utf-8_expected.txt  lorem-utf-8_whole-words_expected.txt  lorem_ignore-case_expected.txt  lorem_match-case_expected.txt  lorem_no-flags_expected.txt  lorem_use-regexp_expected.txt  many-a-acute.txt  many-a-acute_buffer-crossing-character_expected.txt  mixed-case_mixed-replace-lower_expected.txt  utf-8-sig.txt  utf-8-sig_utf-8-sig_expected.txt
tests/: mixed-input.txt  test_bad_encoding.py  test_explicit_encoding.py  test_ignore_case.py  test_match_case.py  test_no_flags.py  test_rpl.py  test_use_regexp.py  test_utf-8.py  test_version.py
