[project]
name = "rpl"
version = "1.16.1"
description = "Replace strings in files"
license = {text = "GPL v3 or later"}
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "regex >= 2022.3.2",
    "chardet",
    "chainstream",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/rrthomas/rpl"
Source = "https://github.com/rrthomas/rpl"

[project.scripts]
rpl = "rpl:main"

[build-system]
requires = [
    "argparse-manpage[setuptools] >= 4.2",
    "pytest-datafiles",
    "regex >= 2022.3.2",
    "chardet",
    "chainstream",
]

[tool.build_manpages]
manpages = [
    "rpl.1:module=rpl:function=get_parser:manual_title=User Commands:include=man-include.1",
]

[tool.pyright]
include = ["rpl"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D1", "D401", "E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2
