[metadata]
name = rpl
author = Reuben Thomas
author_email = rrt@sc3d.org
home_page = https://github.com/rrthomas/rpl
version = 1.15.3
description = Replace strings in files
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL v3 or later
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3

[options]
packages = rpl
python_requires = >= 3.7
install_requires =
    regex >= 2022.3.2
    chardet
    chainstream
setup_requires =
    argparse-manpage >= 4.1
    pytest-datafiles
    regex >= 2022.3.2
    chardet
    chainstream

[options.entry_points]
console_scripts =
    rpl = rpl:main

[build_manpages]
manpages = rpl.1:module=rpl:function=get_parser:manual_title=User Commands:include=man-include.1
